# basic_django

./: DockerfileNode  DockerfilePython  README.md  docker-compose.yml  pyproject.toml
backend/: db.sqlite3  pyproject.toml
backend/api/: settings.py  urls.py
backend/snippets/: admin.py  models.py  serializers.py  urls.py  views.py
backend/snippets/migrations/: 0001_initial.py
basic_django/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json
frontend/src/: App.tsx
