[tool.poetry]
name = "basic-django"
version = "0.1.0"
description = ""
authors = ["dhythm <yuta.okada.20@gmail.com>"]
readme = "README.md"
packages = [{include = "basic_django"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
